[FIX] loyalty: Style distorts the size of the logo

--- a/addons/loyalty/static/src/scss/loyalty.scss
+++ b/addons/loyalty/static/src/scss/loyalty.scss
@@ -70,3 +70,12 @@
         height: fit-content;
     }
 }
+
+.o_offer .mt32 {
+	img {
+		max-width:200px;
+		max-height:150px;
+		width: auto;
+		height: auto;
+	}
+}
